# capnp-ocaml

./: .gitignore  .merlin  .travis.yml  CHANGELOG.adoc  CHANGES.md  LICENSE.md  Makefile  OMakefile  OMakeroot  README.adoc  README.md  _config.yml  _oasis  about.md  capnp.opam  dune-project  farPointer.ml  index.html  listPointer.ml  message.ml  message.mli  messageReader.ml  messageStorage.mli  opam  pluginSchema.ml  pointer.ml  setup.ml  strStorage.ml  stringMessage.ml  structPointer.ml  util.ml
_posts/: .2014-09-01-capnp-ocaml-2.0.md.swp  2014-09-01-capnp-ocaml-2.0.md  2014-09-02-capnp-ocaml-2.0.md
capnproto/doc/: _config.yml
pkg/: pkg.ml
public/bench/: xorshift-c.md  xorshift-ocaml.md
src/: OMakefile  farPointer.ml  genBuilder.ml  genCommon.ml  genModules.ml  genReader.ml  genSignatures.ml  generate.ml  main.ml  message.ml  message.mli  messageBuilder.ml  messageReader.ml  messageStorage.mli  pluginSchema.ml  pluginSchema.mli  pointer.ml  runtime.ml  runtime.mli  runtimeBuilder.ml  runtimeCommon.ml  strStorage.ml  structPointer.ml  topsort.ml  util.ml
src/benchmark/: OMakefile  capnpCarsales.ml  capnpCatrank.ml  capnpEval.ml  common.ml  dune  fastRand.ml  fast_rand.c  gmon.out  jbuild  main.ml  methods.ml  test.py  testCaseSig.ml
src/benchmark/fastRand/: dune  fastRand.ml  fast_rand.c  jbuild
src/compiler/: OMakefile  c2b2b.ml  c2b2b.mli  defaults.ml  defaults.mli  dune  genCommon.ml  genModules.ml  genSignatures.ml  generate.ml  jbuild  main.ml  make_includes.ml  pluginSchema.ml  pluginSchema.mli  topsort.ml
src/examples/1/: dune  example1.ml  foo.capnp
src/examples/2/: dune  example2.ml  shape.capnp
src/runtime/: META  OMakefile  builder-inc.ml  builder.ml  builderInc.ml  builderOps.ml  bytesStorage.ml  cArray.ml  cArray.mli  capnp.ml  codecs.ml  codecs.mli  codecsSig.ml  common-inc.ml  common.ml  commonInc.ml  commonOps.ml  dune  farPointer.ml  fragmentBuffer.ml  fragmentBuffer.mli  iO.ml  iO.mli  innerArray.ml  innerArray.mli  jbuild  listPointer.ml  listStorageType.ml  message-inc.ml  message.ml  message.mli  messageSig.ml  messageStorage.ml  otherPointer.ml  packing.ml  pointer.ml  rPC.ml  reader-inc.ml  reader.ml  readerInc.ml  (+5 more)
src/tests/: OMakefile  dune  jbuild  run_tests.ml  test-iface-import.capnp  testBytesStorage.ml  testCodecs.ml  testCycles.capnp  testEncoding.ml  testLists.capnp  testMisc.ml  testPacking.ml  testStringStorage.ml
src/unix/: dune  iO.ml  iO.mli  jbuild
