opam-version: "2.0"
name: "capnp"
maintainer: "Paul Pelzl <pelzlpj@gmail.com>"
authors: "Paul Pelzl <pelzlpj@gmail.com>"
homepage: "https://github.com/capnproto/capnp-ocaml"
bug-reports: "https://github.com/capnproto/capnp-ocaml/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0"}
  "result"
  "core_kernel" {>= "v0.11.0"}
  "extunix"
  "ocplib-endian" {>= "0.7"}
  "res"
  "uint"
  "core" {with-test}
  "ounit" {with-test}
  "conf-capnproto" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest" "@src/benchmark/benchmarks"] {with-test}
]
dev-repo: "git+https://github.com/capnproto/capnp-ocaml.git"
