(executable
 (name main)
 (libraries capnp capnp_unix fast_rand base)
 (flags :standard -w -53-55)
 (ocamlopt_flags :standard -O3 -inline 2000))

(rule
 (targets carsales)
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets catrank)
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets eval)
 (deps main.exe)
 (action
  (run ln main.exe %{targets})))

(rule
 (targets carsales.ml carsales.mli)
 (deps
  (:< carsales.capnp)
  ../compiler/main.bc)
 (action
  (run capnpc -o ../compiler/main.bc %{<})))

(rule
 (targets catrank.ml catrank.mli)
 (deps
  (:< catrank.capnp)
  ../compiler/main.bc)
 (action
  (run capnpc -o ../compiler/main.bc %{<})))

(rule
 (targets eval.ml eval.mli)
 (deps
  (:< eval.capnp)
  ../compiler/main.bc)
 (action
  (run capnpc -o ../compiler/main.bc %{<})))

(alias
 (name benchmarks)
 (deps carsales catrank eval))
